--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,6 @@ RewriteRule anmeldung$ anmeldung.php
 RewriteRule wichtel$ wichtel.php
 RewriteRule submit$ submit.php
 RewriteRule closed$ closed.html
-RewriteRule edit\/(.*)$ edit.php?code=$1
+RewriteRule edit\/([A-z0-9\-]+#?)$ edit.php?code=$1
 ErrorDocument 404 /wichteln/404.html
 ErrorDocument 403 /wichteln/403.html
